# cogstore-arcade

./: .gitignore  README.md  index.html
.github/workflows/: publish.yml
cog/doom/: Cargo.toml  Dockerfile  NOTICE  README.md  build.rs
cog/doom/assets/: index.html
cog/doom/src/: main.rs
manifests/doom/: cog.toml
